Completed Header Section

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AmanDeep</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/d46ed99af6.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- header  -->
 
     <header id="bodyHeader">
         <nav>
-            <ul class="HList text-center">
+            <ul class="HList text-center nav-menu">
                 <li><a href="#">Home</a></li>
                 <li><a href="">About</li>
                 <li><a href="">Skills</a></li>
@@ -21,6 +22,20 @@
                 <li><a href="">Contact</a></li>
             </ul>
         </nav>
+        <div id="name-social-container">
+            <div class="text-center">
+                <h1 id="my-name">
+                    Aman Deep
+                </h1>
+            </div>
+            <ul class="HList text-center social-icons">
+                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                <li><a href="#"><i class="fab fa-quora"></i></a></li>
+                <li><a href="#"><i class="fab fa-stack-overflow"></i></a></li>
+            </ul>
+        </div>
     </header>
 
     <!-- main -->
