--- a/index.html
+++ b/index.html
@@ -67,27 +67,128 @@
     <!-- Skills section -->
 
     <section id="skills">
-
+        <h1 class="section-heading mb75">
+            <span>
+                <i class="fas fa-chalkboard-teacher"></i>
+            </span>
+            <span>Skills</span>
+        </h1>
+        <div class="skills-display">
+            <div class="skill-progress">
+                <div class="eighty-five-percent mb-blue">
+                    <div class="skill-name">
+                        <span>C++</span>
+                    </div>
+                </div>
+                <div></div>
+            </div>
+            <div class="skill-progress">
+                <div class="eighty-five-percent mb-blue">
+                    <div class="skill-name">
+                        <span>JAVA</span>
+                    </div>
+                </div>
+                <div></div>
+            </div>
+            <div class="skill-progress">
+                <div class="seventy-five-percent mb-red">
+                    <div class="skill-name">
+                        <span>HTML</span>
+                    </div>
+                </div>
+                <div></div>
+            </div>
+            <div class="skill-progress">
+                <div class="seventy-percent mb-green">
+                    <div class="skill-name">
+                        <span>PYTHON</span>
+                    </div>
+                </div>
+                <div></div>
+            </div>
+            <div class="skill-progress">
+                <div class="sixty-five-percent mb-purple">
+                    <div class="skill-name">
+                        <span>JAVASCRIPT</span>
+                    </div>
+                </div>
+                <div></div>
+            </div>
+        </div>
     </section>
 
     <!-- Experience -->
     <section id="experience">
-
+        <div></div>
     </section>
 
     <!-- Education -->
     <section id="education">
-
+        <div></div>
     </section>
 
     <!-- Portfolio -->
     <section id="portfolio">
-
+        <h1 class="section-heading mb75">
+            <span><i class="fas fa-th-list"></i></span>
+            <span>Portfolio</span>
+        </h1>
+        <div id="portfolio-container">
+            <div class="portfolio-image-container">
+                <img src="./images/DIGIHEALTH.png" alt="" srcset="">
+                <div class="portfolio-details">
+                    <p>
+                        More on Portfolio random
+                    </p>
+                </div>
+            </div>
+            <div class="portfolio-image-container">
+                <img src="./images/DIGIHEALTH.png" alt="" srcset="">
+                <div class="portfolio-details">
+                    <p>
+                        More on Portfolio random
+                    </p>
+                </div>
+            </div>
+            <div class="portfolio-image-container">
+                <img src="./images/DIGIHEALTH.png" alt="" srcset="">
+                <div class="portfolio-details">
+                    <p>
+                        More on Portfolio random
+                    </p>
+                </div>
+            </div>
+            <div class="portfolio-image-container">
+                <img src="./images/DIGIHEALTH.png" alt="" srcset="">
+                <div class="portfolio-details">
+                    <p>
+                        More on Portfolio random
+                    </p>
+                </div>
+            </div>
+            <div class="portfolio-image-container">
+                <img src="./images/DIGIHEALTH.png" alt="" srcset="">
+                <div class="portfolio-details">
+                    <p>
+                        More on Portfolio random
+                    </p>
+                </div>
+            </div>
+            <div class="portfolio-image-container">
+                <img src="./images/DIGIHEALTH.png" alt="" srcset="">
+                <div class="portfolio-details">
+                    <p>
+                        More on Portfolio random
+                    </p>
+                </div>
+            </div>
+        </div>
+        
     </section>
 
     <!-- Contact -->
     <section id="contact">
-
+        <div></div>
     </section>
 
     </main>
