Added Contact Section

--- a/index.html
+++ b/index.html
@@ -188,7 +188,42 @@
 
     <!-- Contact -->
     <section id="contact">
-        <div></div>
+        <h1 class="section-heading">
+            <span>
+                <i class="far fa-id-card mb75px"></i>
+            </span>
+            <span>
+                Contact
+            </span>
+        </h1>
+        <div id="contact-container">
+            <div id="contact-form-container">
+                <form action="" id="contact-form">
+                <input type="text" id="input-name" placeholder="Your Name">
+                <input type="email" id="input-email" placeholder="Your Email">
+                <textarea name="input-message" id="input-message" placeholder="Your Message" rows="2" cols="1"></textarea>
+                <button type="submit" class="sub-btn">SEND MESSAGE</button>
+                </form>
+            </div>
+            <div id="my-details-container">
+                <h3>Get In Touch</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia, dignissimos!</p>
+                <h3>My Address</h3>
+                <div class="my-details-info-container"><span>Delhi, India</span></div>
+                <div class="my-details-info-container"><span>0876543219</span></div>
+                <div class="my-details-info-container"><span>johndoe@gmail.com</span></div>
+            </div>
+        </div>
+        <div class="text-center social-icons">
+
+            <ul class="HList text-center social-icons">
+                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                <li><a href="#"><i class="fab fa-quora"></i></a></li>
+                <li><a href="#"><i class="fab fa-stack-overflow"></i></a></li>
+            </ul>
+        </div>
     </section>
 
     </main>
